# Backtester

./: .gitignore  CMakeLists.txt  README.md
data/: AACG.csv  AAL.csv  AAME.csv  AAON.csv  AAP.csv  AAPL.csv  AAU.csv  AAWW.csv  AAXJ.csv  AAXN.csv  AB.csv  ABB.csv  ABC.csv  ABCB.csv  ABEO.csv  ABEV.csv  ABG.csv  ABM.csv  ABMD.csv  ABR.csv  ABT.csv  ACAD.csv  ACC.csv  ACCO.csv  ACGL.csv  ACH.csv  ACHC.csv  ACHV.csv  ACIW.csv  ACLS.csv  ACM.csv  ACN.csv  ACNB.csv  ACOR.csv  ACTG.csv  ACU.csv  ACWI.csv  ACWX.csv  ACY.csv  ADBE.csv  (+3715 more)
docs/: Doxyfile.in
docs/html/: annotated.html  backtestCommand_8h_source.html  bar_8h_source.html  buildCommand_8h_source.html  classBacktestCommand-members.html  classBacktestCommand.html  classBar-members.html  classBar.html  classBuildCommand-members.html  classBuildCommand.html  classCSVField-members.html  classCSVField.html  classCSVReader-members.html  classCSVReader.html  classCommand-members.html  classCommand.html  classCommandManager-members.html  classCommandManager.html  classDate-members.html  classDate.html  classDriver-members.html  classOrder.html  (+49 more)
include/: backtestCommand.h  bar.h  buildCommand.h  command.h  commandManager.h  csvField.h  csvReader.h  date.h  defaults.h  driver.h  helpCommand.h  listCommand.h  metrics.h  order.h  position.h  strategy.h  technical.h  util.h
src/: backtestCommand.cpp  bar.cpp  buildCommand.cpp  command.cpp  commandManager.cpp  csvField.cpp  csvReader.cpp  date.cpp  driver.cpp  helpCommand.cpp  listCommand.cpp  main.cpp  metrics.cpp  order.cpp  position.cpp  strategy.cpp  technical.cpp  util.cpp
(+91 files in other folders)
